--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
     .card img.birthday {
       width: 60%;
       max-width: 50vw;
-      max-height: auto;
+      max-height: 43vw;
       border-radius: 30px;
     }
   }
